[package]
name = "mining-pool-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
env_logger = "0.7.1"
serde = "1.0"
serde_json = "1.0"
diesel = {version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid"]}
env_logger = "0.7.1"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
rand = "0.8.4"
uuid = {version = "0.6", features = ["serde", "v4"]}